src/objects/CnP_PaaS_Bridge__CnPData__c.object
<CustomObject>
    <fields>
        <fullName>CnP_PaaS_Bridge__DataXML__c</fullName>
        <label>DataXML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS_Bridge__Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS_Bridge__StatusID__c</fullName>
        <label>StatusID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessedByWG__c</fullName>
        <description>Was this CnP_Data record already processed in WG?</description>
        <inlineHelpText>Was this CnP_Data record already processed in WG?</inlineHelpText>
        <label>ProcessedByWG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                    <default>true</default>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>To Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Error_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What caused this CnPData record not to process?</description>
        <inlineHelpText>What caused this CnPData record not to process?</inlineHelpText>
        <label>Related Error Record</label>
        <referenceTo>WG_Error_Log__c</referenceTo>
        <relationshipLabel>C&amp;P Data</relationshipLabel>
        <relationshipName>C_P_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>C&amp;P Data</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>C&amp;P Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>